--- a/kazm/sast_test.in
+++ b/kazm/sast_test.in
@@ -1,7 +1,6 @@
-int fun(int x, int y)
+int fun()
 {
-  prints("hello world");
-  return x;
+  return 1;
 }
 
 int main()
@@ -10,10 +9,7 @@ int main()
   bool b;
   
   b = true;
-  i = 1;
+  i = fun();
 
-  fun(i = 2, i = i+1);
-
-  print(i);
   return 0;
 }
