--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,4 +5,5 @@ jobs:
     runs-on: ubuntu-latest
     container: aapeliv/plt
     steps:
+    - uses: actions/checkout@v2
     - run: cd kazm/ && ./test.py
