--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,4 +5,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - run: cd kazm/ && docker run --rm -it -v $(pwd):/home/kazm -w=/home/kazm aapeliv/plt ./test.py
+    - run: cd kazm/ && docker run --rm -t -v $(pwd):/home/kazm -w=/home/kazm aapeliv/plt ./test.py
