--- a/kazm/Makefile
+++ b/kazm/Makefile
@@ -1,4 +1,4 @@
 .PHONY : clean
 clean :
 	ocamlbuild -clean
-	rm -rf loggy.txt ocamlllvm *.diff parser.ml parser.mli parser.output *.kazm *.cerr *.err *.out
+	rm -rf loggy.txt ocamlllvm *.diff parser.ml parser.mli parser.output *.kazm *.cerr *.err *.out *.ll *.s
